added count api
