# src/routes/user.ts
@@ -13,7 +13,8 @@ router.get('/game', controllers.User.games)
 router.get('/events', controllers.User.events)
 router.get('/transactions', controllers.User.transactions)
 router.get('/self', controllers.User.self)
-
+router.get('/count' , controllers.User.count)
+// router.get('/game/:gameId', controllers.User.gameDetails)
 router.get('/transacttion/:userId', controllers.User.GetUserTransacttion)
 router.get("/game/transaction/:gameId",controllers.User.GetGameTransacttion)
 router.post('/fireEvent/:eventId' ,validateRequest(validators.user.fireEvent),controllers.User.fireEvent)
